# ComfyUI-Qwen-gguf

./: .gitignore  README.md  folder_registry.py  llama_binary.py  llama_cli.py  nodes.py  pyproject.toml
.github/workflows/: publish-comfy-registry.yml
tests/: test_llama_binary.py  test_llama_cli.py  test_llama_cli_parse.py  test_llama_cli_process.py
