[project]
name = "qwen-gguf"
description = "Run Qwen GGUF models in ComfyUI through llama.cpp release binaries."
version = "0.1.0"
license = {file = "LICENSE"}
dependencies = ["numpy", "Pillow"]

[project.urls]
Repository = "https://github.com/KingManiya/ComfyUI-Qwen-gguf"

[tool.comfy]
PublisherId = "kingmaniya"
DisplayName = "Qwen GGUF"
