[project]
name = "ComfyUI-Qwen-gguf"
description = "Run Qwen 3VL/3.5/3.6 GGUF models in ComfyUI through llama.cpp release binaries."
version = "0.2.0"
license = {file = "LICENSE"}
dependencies = ["numpy", "Pillow"]

[project.urls]
Repository = "https://github.com/KingManiya/ComfyUI-Qwen-gguf"

[tool.comfy]
PublisherId = "kingmaniya"
DisplayName = "Qwen GGUF"
