[project]
name = "ComfyUI-Qwen-gguf"
description = "Run Qwen3-VL, Qwen3.5, and Qwen3.6 GGUF models in ComfyUI with llama.cpp."
version = "0.3.0"
license = {file = "LICENSE"}
dependencies = ["numpy", "Pillow"]

[project.urls]
Repository = "https://github.com/KingManiya/ComfyUI-Qwen-gguf"

[tool.comfy]
PublisherId = "kingmaniya"
DisplayName = "Qwen GGUF"
